# 2021-spring-polytech-cpp

./: .gitignore  LICENSE  README.md  Лаба 18  выводит в битах переменные
01_lab/: CMakeLists.txt  main.cpp
02_lab/: CMakeLists.txt  main.cpp
03_lab/: CMakeLists.txt  main.cpp
04_lab/: CMakeLists.txt  D4.cpp  main.cpp  task4.cpp
05_lab/: CMakeLists.txt  main.cpp
06_lab/: CMakeLists.txt  main.cpp
07_lab/: CMakeLists.txt  main.cpp
08_lab/: CMakeLists.txt  main.cpp
09_lab/: CMakeLists.txt  main.cpp
10_lab/: CMakeLists.txt  main.cpp
11_lab/: CMakeLists.txt  main.cpp
12_lab/: CMakeLists.txt  main.cpp
13_lab/: CMakeLists.txt  main.cpp
14_lab/: CMakeLists.txt  main.cpp
15_lab/: 15_lab.sln  15_lab.vcxproj  CMakeLists.txt  main.cpp
15_lab/Debug/: 15_lab.exe.recipe  15_lab.ilk  (+2 more)
16_lab/: CMakeLists.txt  main.cpp
17_lab/: CMakeLists.txt  main.cpp
18_lab/: CMakeLists.txt  main.cpp
19_lab/: CMakeLists.txt  README.md
20_lab/: CMakeLists.txt  README.md
21_lab/: CMakeLists.txt  README.md
22_lab/: CMakeLists.txt  README.md
22_lab/src/: functions.cpp  functions.h
22_lab/tests/: test.cpp
23 лаба/: 23 лаба.sln
23_lab/: CMakeLists.txt  main.cpp
24_lab/: CMakeLists.txt  README.md
25_lab/: CMakeLists.txt  README.md
26_lab/: CMakeLists.txt  README.md
26_lab/src/: circle.cpp  circle.h  line.cpp  line.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  square.cpp  square.h
26_lab/tests/: test_draw.cpp
27_lab/: CMakeLists.txt  README.md
LABA 27/: CMakeLists.txt
ЛАба 27/: CMakeLists.txt  Laba 27.cpp  Laba 27.h
Лаба 21_02 — копия/: CMakeLists.txt  Test.cpp
Лаба 22.02/: CMakeLists.txt
Лаба 23/: CMakeLists.txt  Исходник.cpp  Лаба 23.cpp
Лаба 25/: CMakeLists.txt  Test.cpp  Лаба 25.cpp
(+46 files in other folders)
