# CMakeList.txt: проект CMake для ЛАба 27; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (CMakeTarget "ЛАба 27.cpp" "ЛАба 27.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
